--- a/_includes/_masthead.html
+++ b/_includes/_masthead.html
@@ -52,7 +52,7 @@
 	<div class="row">
 		<div class="small-12 columns">
 			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }}">
-				<img src="{{ site.url }}{{ site.baseurl }}/assets/img/{{ site.logo }}" alt="{{ site.title }} – {{ site.slogan }}">
+				<h1>The Costal Zone Foundation</h1>
 			</a>
 		</div><!-- /.small-12.columns -->
 	</div><!-- /.row -->
