--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -89,7 +89,8 @@ body.video cite { color: #fff; }
 ------------------------------------------------------------------- */
 
 @media #{$small-only} {
-    #logo img {
+    #logo img,
+    #logo h1 {
         display: none;
     }
     #masthead {
@@ -116,7 +117,8 @@ body.video cite { color: #fff; }
 ------------------------------------------------------------------- */
 
 @media #{$medium-only} {
-    #logo img {
+    #logo img,
+    #logo h1 {
         margin-top: 60px;
     }
     #masthead {
@@ -139,7 +141,8 @@ body.video cite { color: #fff; }
 ------------------------------------------------------------------- */
 
 @media #{$large-only} {
-    #logo img {
+    #logo img,
+    #logo h1 {
         margin-top: 80px;
     }
     #masthead {
@@ -162,7 +165,8 @@ body.video cite { color: #fff; }
 ------------------------------------------------------------------- */
 
 @media #{$xlarge-up} {
-    #logo img {
+    #logo img,
+    #logo h1 {
         margin-top: 110px;
     }
     #masthead {
