Add min-height to front page widget images

--- a/_sass/_09_elements.scss
+++ b/_sass/_09_elements.scss
@@ -148,3 +148,8 @@ img.lazy {
     transition: opacity 0.7s;
     opacity: 1;
 }
+
+/* Front page widget
+------------------------------------------------------------------- */
+
+.frontpage-widget--img {min-height: 230px;}
