--- a/_includes/_masthead.html
+++ b/_includes/_masthead.html
@@ -1,14 +1,6 @@
 {% if page.header == NULL and page.header.image_fullwidth == NULL and page.header.pattern == NULL and page.header.background-color == NULL and page.header.title == NULL %}
 
-<div id="masthead-no-image-header">
-	<div class="row">
-		<div class="small-12 columns">
-			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }}">
-				<img src="{{ site.url }}{{ site.baseurl }}/assets/img/{{ site.logo }}" alt="{{ site.title }} – {{ site.slogan }}">
-			</a>
-		</div><!-- /.small-12.columns -->
-	</div><!-- /.row -->
-</div><!-- /#masthead -->
+<div id="masthead-no-image-header"></div><!-- /#masthead -->
 
 {% if page.breadcrumb == true %}
 {% include _breadcrumb.html %}
@@ -52,7 +44,7 @@
 	<div class="row">
 		<div class="small-12 columns">
 			<a id="logo" href="{{ site.url }}" title="{{ site.title }} – {{ site.slogan }}">
-				<h1>The Costal Zone Foundation</h1>
+				<!-- <h1>The Coastal Zone Foundation</h1> -->
 			</a>
 		</div><!-- /.small-12.columns -->
 	</div><!-- /.row -->
