Add updated page copy

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -25,7 +25,7 @@ format: frontpage
 * First check, if widget is empty or not by checking if there is a title
 *
 {% endcomment %}
-<div class="row t60">
+<div class="row t30">
 	{% if page.widget1.title %}
 		{% include _frontpage-widget.html widget=page.widget1 %}
 	{% endif %}
@@ -40,6 +40,8 @@ format: frontpage
 		{% include _frontpage-widget.html widget=page.widget3 %}
 	{% endif %}
 </div><!-- /.row -->
+
+<div class="row t60"><img src="/images/cvf_logo.jpg" /></div>
 
 
 
