Correct logo url on homepage

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -41,7 +41,7 @@ format: frontpage
 	{% endif %}
 </div><!-- /.row -->
 
-<div class="row t60"><img src="/images/cvf_logo.jpg" /></div>
+<div class="row t60"><img src="/public/images/cvf_logo.jpg" /></div>
 
 
 
