--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -41,7 +41,7 @@ format: frontpage
 	{% endif %}
 </div><!-- /.row -->
 
-<div class="row t60"><img src="/public/images/cvf_logo.jpg" /></div>
+<div class="row t60"><img class="logo" src="/assets/img/czf_logo.jpg" /></div>
 
 
 
