--- a/_sass/_09_elements.scss
+++ b/_sass/_09_elements.scss
@@ -153,3 +153,14 @@ img.lazy {
 ------------------------------------------------------------------- */
 
 .frontpage-widget--img {min-height: 230px;}
+
+
+/* Logo
+------------------------------------------------------------------- */
+
+.logo {
+  max-width: 500px;
+  margin: 0 auto;
+  display: block;
+}
+
