Correct path to logo

--- a/_layouts/frontpage.html
+++ b/_layouts/frontpage.html
@@ -41,7 +41,7 @@ format: frontpage
 	{% endif %}
 </div><!-- /.row -->
 
-<div class="row t60"><img class="logo" src="{{ domain }}{{ site.baseurl }}/assets/img/czf_logo.jpg" /></div>
+<div class="row t60"><img class="logo" src="{{ domain }}/assets/img/czf_logo.jpg" /></div>
 
 
 
